--- a/simplified_code.Rmd
+++ b/simplified_code.Rmd
@@ -156,7 +156,9 @@ get_promoter_distances <- function(
       }
       
       # progress bar oogie boogie
-      .pb$tick(tokens = list(what = .curr_locus))
+      .pb$tick(
+        tokens = list(what = paste(.curr_chr, .curr_locus, sep = " - "))
+      )
       
       .each_output
     })
@@ -236,10 +238,7 @@ get_promoters <- function(
       
       # Assign the current chromosome name to an object ("character")
       .curr_chr <- .keys %>% dplyr::pull(.chr_var)
-      
-      # Talk to me!
-      print(.curr_chr)
-      
+
       # Should trimming of promoter sizes be moved here???
       
       # Open FASTA file for each chromosome b4 extracting promoters in each
