--- a/simplified_code.Rmd
+++ b/simplified_code.Rmd
@@ -80,6 +80,7 @@ txdb <- paste0(
 ```
 
 # GET PROMOTERS
+## Calculate distances to closest upstream locus
 ```{r}
 get_promoter_distances <- function(
     .annotations,
@@ -176,6 +177,7 @@ minyao_promoters <- annotations %>%
 minyao_promoters
 ```
 
+## Trim found upstream distances and define promoter lengths
 ```{r}
 trim_distances <- function(.distances, .min_size = 100, .max_size = 2000) {
   .distances <- .distances  %>%
@@ -197,8 +199,7 @@ minyao_promoters2 <- minyao_promoters %>%
 minyao_promoters2
 ```
 
-
-# GET PROMOTERS
+## Get promoter sequences
 ```{r}
 get_promoters <- function(
     .distances,
