--- a/README.Rmd
+++ b/README.Rmd
@@ -5,11 +5,11 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  out.width = "100%"
-)
+# knitr::opts_chunk$set(
+#   collapse = TRUE,
+#   comment = "#>",
+#   out.width = "100%"
+# )
 ```
 
 # CSCpromoters
@@ -35,7 +35,7 @@ The goal of CSCpromoters is to extract the sequences of promoter regions from th
 You can install the development version of `CSCpromoters` and `CSCfasta` from 
 [GitHub](https://github.com/) with:
 
-```{r eval=FALSE}
+```{r installation, eval=FALSE}
 # install.packages("devtools")
 devtools::install_github("thiagomaf/CSCfasta")
 devtools::install_github("thiagomaf/CSCpromoters")
@@ -50,7 +50,7 @@ This is a basic example which shows you how to solve a common problem:
 
 ### SETUP
 #### Load libraries
-```{r}
+```{r libraries}
 library(magrittr)
 
 #library(CSCfasta)
@@ -58,7 +58,7 @@ library(CSCpromoters)
 ```
 
 #### Define constants
-```{r eval=FALSE}
+```{r constants, eval=FALSE}
 folder1 <- paste0(
   "./"
 )
@@ -68,7 +68,7 @@ folder2 <- paste0(
 )
 ```
 
-```{r, include = FALSE}
+```{r include = FALSE}
 folder1 <- paste0(
   "../../../",
   "Data/FASTA sequences/Genomes/Hordeum vulgare - Golden Promise/"
@@ -83,7 +83,7 @@ folder2 <- paste0(
 
 ### LOAD DATA
 #### H. vulgare cv. Golden Promise annotations
-```{r}
+```{r annotations}
 annotations <- paste0(
   folder1,
   "Annotation_Golden_Promise_v1r1_Apollo_300620_mRNA.fasta"
@@ -93,7 +93,7 @@ annotations <- paste0(
 ```
 
 #### H. vulgare cv. Golden Promise TxDB from GFF file
-```{r}
+```{r gff}
 txdb <- paste0(
   folder1,
   "Horvul_GP_v1r1_Apollo_30_06_20_named_product_GO.gff3"
@@ -110,7 +110,7 @@ txdb <- paste0(
 
 ### GET PROMOTERS
 #### Explicit pipeline
-```{r}
+```{r explicit_pipeline}
 annotations %>%
   # Choose which loci to use
   filter_locus(
@@ -125,7 +125,7 @@ annotations %>%
 ```
 
 #### Wrap-up function
-```{r}
+```{r wrap_up}
 annotations %>%
   # Wrap-up function
   get_promoters(
