--- a/README.Rmd
+++ b/README.Rmd
@@ -148,13 +148,13 @@ annotations %>%
 - CSCprimers
 	
 ### Files
-- Annotation_Golden_Promise_v1r1_Apollo_300620_mRNA.fasta
-- Horvul_GP_v1r1_Apollo_30_06_20_named_product_GO.gff3
-- Hordeum_vulgare.refseq[chr1H].fasta
-- Hordeum_vulgare.refseq[chr2H].fasta
-- Hordeum_vulgare.refseq[chr3H].fasta
-- Hordeum_vulgare.refseq[chr4H].fasta
-- Hordeum_vulgare.refseq[chr5H].fasta
-- Hordeum_vulgare.refseq[chr6H].fasta
-- Hordeum_vulgare.refseq[chr7H].fasta
-- Hordeum_vulgare.refseq[chrUn].fasta
+- [folder1]/Annotation_Golden_Promise_v1r1_Apollo_300620_mRNA.fasta
+- [folder1]/Horvul_GP_v1r1_Apollo_30_06_20_named_product_GO.gff3
+- [folder2]/Hordeum_vulgare.refseq[chr1H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr2H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr3H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr4H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr5H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr6H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chr7H].fasta
+- [folder2]/Hordeum_vulgare.refseq[chrUn].fasta
