--- a/new_code.Rmd
+++ b/new_code.Rmd
@@ -111,6 +111,10 @@ annotations %>%
   get_promoter_distances(.debug = F) %>%
   # Trim found upstream distances and define promoter lengths
   trim_promoter_distances(.min_size = 100, .max_size = 2000) %>%
+  (function(.distances) {
+    save(.distances, file = "data/my_distances.rda")
+    .distances
+  }) %>% 
   # Get promoter sequences
   get_promoter_sequences(
     .txdb = txdb, .FASTA_list = fasta_list, .parallel = F
