--- a/README.Rmd
+++ b/README.Rmd
@@ -67,7 +67,9 @@ library(CSCpromoters)
 ```
 
 #### Define constants
-```{r constants}
+```{r constants, eval=FALSE}
+# MIN-YAO, set eval=TRUE and comment the next block to run on your computer
+
 gff_folder <- paste0(
   "./genome_barley_GP/" # user defined path
 )
@@ -85,24 +87,24 @@ fasta_list <- (function(
 ```
 
 ```{r include = FALSE}
-# gff_folder <- paste0(
-#   "../../../",
-#   "Data/FASTA sequences/Genomes/Hordeum vulgare - Golden Promise/"
-# )
-# 
-# fasta_list <- (function(
-#     .chr_list = c(
-#       "chr1H", "chr2H", "chr3H", "chr4H", "chr5H", "chr6H", "chr7H", "chrUn"
-#     ),
-#     .folder   = paste0(
-#       "../../../",
-#       "rcs-gedo2-team_coldstorage/LAB_Share/RNAseq/barley/genome_GP/"
-#     )
-# ) {
-#   .folder %>% 
-#     paste0(paste0("Hordeum_vulgare.refseq[", .chr_list, "].fasta")) %>% 
-#     magrittr::set_names(.chr_list)
-# })()
+gff_folder <- paste0(
+  "../../../",
+  "Data/FASTA sequences/Genomes/Hordeum vulgare - Golden Promise/"
+)
+
+fasta_list <- (function(
+    .chr_list = c(
+      "chr1H", "chr2H", "chr3H", "chr4H", "chr5H", "chr6H", "chr7H", "chrUn"
+    ),
+    .folder   = paste0(
+      "../../../",
+      "rcs-gedo2-team_coldstorage/LAB_Share/RNAseq/barley/genome_GP/"
+    )
+) {
+  .folder %>%
+    paste0(paste0("Hordeum_vulgare.refseq[", .chr_list, "].fasta")) %>%
+    magrittr::set_names(.chr_list)
+})()
 ```
 
 
